oh wow alignment was bugging me

--- a/librarycloud/static/css/project.css
+++ b/librarycloud/static/css/project.css
@@ -7,6 +7,10 @@
   color: #333;
 }
 
+.navbar-brand {
+  padding-left: 0;
+}
+
 .row {
   margin-bottom: 10px;
 }
